Adicionei um parágrafo.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
     <hr> 
     <!-- [hr] - Linha horizontal -->
     <p>Let's see where it goes.</p>
+    <p>And now I'm trying some shortcuts...</p>
   </body>
 </html>
